# mspm0-cmake-freertos-template

./: .gitignore  CMakeLists.txt  MEMORY_GUIDE.md  OLED_DEBUG.md  PROJECT.md  mspm0g350x_base.cmake
Includes/: FreeRTOSConfig.h  uart_printf.h
Modules/Button/: button.h
Modules/MPU6050/: mpu6050_kalman.c  mpu6050_kalman.h  mpu6050_task.c  mpu6050_task.h  mspm0_i2c.c
Modules/Motor/: encoder.c  encoder.h  motor_driver.c  motor_driver.h  motor_task.c  motor_task.h
Modules/OLED/: oled_software_i2c.c  oled_software_i2c.h  oled_task.c  oled_task.h  oledfont.h
Modules/PID/: PID.c  PID.h
Modules/Tracking/: Tracking.c  Tracking.h  tracking_task.c  tracking_task.h
Sources/: main.c  sysmem.c  uart_printf.c
SysConfig/: MSPM0_FreeRTOS_Template.syscfg  ti_msp_dl_config.c  ti_msp_dl_config.h
